@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3423 utf-8
+personal_ws-1.1 en 3426 utf-8
 AAC
 AAS
 ABI
@@ -1409,6 +1409,7 @@ USVs
 UTC
 UTalk
 UUU
+UUUU
 UX
 Ubuntu
 Ulf
@@ -2914,6 +2915,7 @@ safenet
 salicru
 sbin
 sbindir
+scanopts
 scd
 sched
 scm
@@ -3284,6 +3286,7 @@ usbhid
 usbif
 usbinfo
 usbmisc
+usbscan
 usbups
 usbus
 usd
