@@ -85,6 +85,10 @@ https://github.com/networkupstools/nut/milestone/10
      names in configuration snippets generated by `nut-scanner`; practical
      support implemented for USB connected drivers. Library API version
      bumped to 2.3.0 accordingly.
+   * Command-line option `-U` for USB scan can now be specified several times
+     to increase the detail level about hardware link to the device (this was
+     previously always suggested, but may be not reliable if USB enumeration
+     gets changed over time). [#2221]
    * Added generation of FreeBSD/pfSense quirks for USB devices supported
      by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
      and need to be pasted into your `/boot/loader.conf.local`). [#2159]
